docs/versions/4.21/groups/M26.md
---
layout: group
group_id: M26
version: "4.21"
---

> **Remediation required.** This group (6 checks) fails on vanilla RHCOS 9.8 and requires MachineConfig remediation. Verified on cnfdt16 (OCP 4.22, RHCOS 9.8) with compliance-operator v1.8.2.

## Overview

Disables dangerous systemd behaviors: prevents Ctrl-Alt-Del from rebooting nodes (both single-press and burst), disables core dump generation and storage to prevent information leakage.

**Profile**: NIST 800-53 Moderate (`rhcos4-moderate`)

## Compliance Checks

| Check | Description |
|-------|-------------|
| `Ctrl-Alt-Del burst action` | Disable CtrlAltDelBurstAction |
| `Ctrl-Alt-Del reboot` | Disable Ctrl-Alt-Del reboot target |
| `Coredump backtraces` | Disable coredump backtrace generation |
| `Coredump storage` | Disable coredump storage |
| `User coredumps` | Disable user coredumps via limits.conf |

## Verification

```bash
oc debug node/<node> -- chroot /host systemctl status ctrl-alt-del.target
```
