docs/versions/4.22/groups/M26.md
---
layout: group
group_id: M26
version: "4.22"
---

> **No remediation needed on RHCOS 9.8+ (OCP 4.22+).** These checks PASS on vanilla RHCOS 9.8 due to hardened OS defaults shipped in that version. Older RHCOS versions (9.6 and earlier) still require remediation. Verified with compliance-operator v1.8.2 and pinned content [quay.io/bapalm/k8scontent:v0.1.80](https://quay.io/repository/bapalm/k8scontent).

## Overview

Disables dangerous systemd behaviors: prevents Ctrl-Alt-Del from rebooting nodes (both single-press and burst), disables core dump generation and storage to prevent information leakage.

**Profile**: NIST 800-53 Moderate (`rhcos4-moderate`)

## Compliance Checks

| Check | Description |
|-------|-------------|
| `Ctrl-Alt-Del burst action` | Disable CtrlAltDelBurstAction |
| `Ctrl-Alt-Del reboot` | Disable Ctrl-Alt-Del reboot target |
| `Coredump backtraces` | Disable coredump backtrace generation |
| `Coredump storage` | Disable coredump storage |
| `User coredumps` | Disable user coredumps via limits.conf |

## Verification

```bash
oc debug node/<node> -- chroot /host systemctl status ctrl-alt-del.target
```
